<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arduino Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="red">Red Off</string>
    <string name="yellow">Yellow Off</string>
    <string name="green">Green Off</string>
    <string name="Temperature">Get Temperature</string>
    <string name="status">Status</string>

</resources>